# print-on-steroids

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  release_major.yml  release_minor.yml  release_patch.yml  test_publish.yml
src/print_on_steroids/: __init__.py  get_frame.py  print.py
