[metadata]
name = print-on-steroids
description = A lean & hackable rich logger and print function.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/konstantinjdobler/print-on-steroids
project_urls =
    Bug Tracker = https://github.com/konstantinjdobler/print-on-steroids/issues
    Changelog = https://github.com/konstantinjdobler/print-on-steroids/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT Software License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    rich
zip_safe = True

[options.extras_require]
dev = 
    black
    ruff

[options.packages.find]
where = src